# const_format_crates

./: .travis.yml  Cargo.toml  Changelog.md  README.md
.github/workflows/: rust.yml
const_format/: Cargo.toml
const_format/src/: __ascii_case_conv.rs  __hidden_utils.rs  __str_methods.rs  char_encoding.rs  const_debug_derive.rs  const_generic_concatcp.rs  doctests.rs  equality.rs  fmt.rs  fmt_macros.rs  for_assert_macros.rs  for_examples.rs  format_marker.rs  formatting.rs  helper_macros.rs  lib.rs  macros.rs  marker_traits.rs  misc_tests.rs  msg.rs  panicking.rs  pargument.rs  pwrapper.rs  slice_cmp.rs  test_utils.rs  utils.rs  wrapper_types.rs
const_format/src/__ascii_case_conv/: word_iterator.rs
const_format/src/__str_methods/: pattern.rs  str_indexing.rs  str_repeat.rs  str_replace.rs  str_splice.rs  str_split.rs
const_format/src/char_encoding/: tests.rs
const_format/src/fmt/: error.rs  examples.rs  formatter.rs  length.rs  std_type_impls.rs  str_writer.rs  str_writer_mut.rs  tests.rs
const_format/src/fmt/std_type_impls/: ranges.rs
const_format/src/fmt/str_writer/: tests.rs
const_format/src/fmt/tests/: display_formatting.rs  formatted_writing.rs  std_impl_tests.rs  str_writer_methods.rs  str_writer_mut.rs
const_format/src/macros/: assertions.rs  call_debug_fmt.rs  constructors.rs  fmt_macros.rs  helper_macros.rs  impl_debug.rs  impl_fmt.rs  map_ascii_case.rs  str_methods.rs
const_format/src/macros/assertions/: assertc_macros.rs  assertcp_macros.rs
const_format/src/marker_traits/: format_marker.rs  type_kind.rs  u8array_trait.rs  write_marker.rs
const_format/src/misc_tests/: call_debug_fmt_macro.rs  concatcp_macro.rs  derive_tests.rs  formatc_macros.rs  formatcp_macro.rs  impl_debug_macro_tests.rs  impl_fmt_macro_tests.rs  shared_cp_macro_tests.rs  type_kind_coercion_macro_tests.rs  writec_macro.rs
const_format/src/misc_tests/derive_tests/: is_a_attributes.rs
const_format/src/pwrapper/: test.rs  tests.rs
const_format/src/wrapper_types/: ascii_str.rs  pwrapper.rs  sliced.rs
const_format/src/wrapper_types/pwrapper/: tests.rs
const_format/tests/: conv_ascii_case.rs  fmt_tests_modules.rs  misc_tests_modules.rs  str_methods.rs
const_format/tests/fmt_tests/: display_formatting.rs  formatted_writing.rs  formatter_methods.rs  std_impl_tests.rs  str_writer_methods.rs  str_writer_mut.rs
const_format/tests/fmt_tests/formatter_methods/: debug_methods.rs
const_format/tests/misc_tests/: assertc_tests.rs  assertcp_tests.rs  asserts.rs  call_debug_fmt_macro.rs  clippy_warnings.rs  concatc_macro_tests.rs  derive_tests.rs  equality_tests.rs  formatc_macros.rs  impl_fmt_macro_tests.rs  inline_const_pattern_tests.rs  shared_cp_macro_tests.rs  type_kind_coercion_macro_tests.rs  writec_macro.rs
const_format/tests/misc_tests/derive_tests/: is_a_attributes.rs
const_format/tests/str_methods_modules/: conv_ascii_case.rs  str_replace.rs  str_splice.rs  str_split_tests.rs
const_format_proc_macros/: Cargo.toml  LICENSE-ZLIB.md
const_format_proc_macros/src/: concat_macro_parsing.rs  derive_debug.rs  error.rs  format_args.rs  format_macro.rs  format_str_parsing.rs  formatting.rs  lib.rs  parse_utils.rs  respan_to_macro.rs  shared_arg_parsing.rs  test_utils.rs  utils.rs
const_format_proc_macros/src/derive_debug/: attribute_parsing.rs  type_detection.rs
const_format_proc_macros/src/format_args/: parsing.rs
const_format_proc_macros/src/format_macro/: tests.rs
const_format_proc_macros/src/format_str/: parsing.rs  tests.rs
const_format_proc_macros/src/format_str_parsing/: errors.rs  tests.rs
print_clippy_warnings/: Cargo.toml
print_clippy_warnings/src/: main.rs
print_errors/: Cargo.toml
print_errors/src/: formatc_macros.rs  lib.rs  using_assertc_macros.rs  using_writec_macro.rs
print_warnings/: Cargo.toml
print_warnings/src/: main.rs
