[package]
name = "const_format"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license = "Zlib"
description = "Concatenate/format contants into `&'static str` constants."
documentation = "https://docs.rs/const_format/"
readme="../README.md"
keywords = ["no-std", "format", "concat"]
categories = ["no-std", "text-processing"]
repository = "https://github.com/rodrimati1992/const_format_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../README.md",
    "../LICENSE-ZLIB.md", 
]

[badges]
travis-ci = { repository =  "rodrimati1992/const_format_crates/" }

[features]
# Remember to disable the "derive" feature before releasing this crate!!
default = ["derive"]
fmt = []
derive = ["fmt"]
debug = ["const_format_proc_macros/debug"]

# "private" features
only_new_tests = []

[dependencies.const_format_proc_macros]
version = "=0.1.0"
path = "../const_format_proc_macros"

[dev-dependencies]
arrayvec = {version = "0.5.1", default_features = false}
fastrand = {version = "1.3", default_features = false}