[package]
name = "const_format"
version = "0.2.31"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license = "Zlib"
description = "Compile-time string formatting"
documentation = "https://docs.rs/const_format/"
readme="../README.md"
keywords = ["no-std", "format", "concat"]
categories = ["no-std", "text-processing"]
repository = "https://github.com/rodrimati1992/const_format_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../README.md",
    "LICENSE-ZLIB.md", 
]

[badges]
travis-ci = { repository =  "rodrimati1992/const_format_crates/" }

[features]
default = []
const_generics = ["rust_1_51"]
nightly_const_generics = ["const_generics"]
rust_1_51 = []
rust_1_64 = ["rust_1_51", "konst", "konst/rust_1_64"]
fmt = ["rust_1_64"]
derive = ["fmt", "const_format_proc_macros/derive"]
# soft-deprecated, use assertc instead.
assert = ["assertc"]
assertc = ["fmt", "assertcp"]
assertcp = ["rust_1_51"]
constant_time_as_str = ["fmt"]
more_str_macros = ["rust_1_64"]

# enables all the features, requires (potentially) the latest nightly
all = [
    "fmt",
    "derive",
    "rust_1_64",
    "assert",
]

##############
### "private" features

# 
__debug = ["const_format_proc_macros/debug"]
__test = []
__only_new_tests = ["__test"]
__docsrs = []

[dependencies.const_format_proc_macros]
version = "=0.2.31"
path = "../const_format_proc_macros"

[dependencies.konst]
version = "0.2.13"
default-features = false
optional = true

[dev-dependencies]
fastrand = {version = "1.3.5", default_features = false}
arrayvec = {version = "0.5.1", default_features = false}

[package.metadata.docs.rs]
features = ["all", "__docsrs"]

