[package]
name = "const_format_proc_macros"
version = "0.0.2"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license = "Zlib"
description = "Implementation detail of the `const_format` crate"
keywords = ["no-std", "format", "concat"]
categories = ["no-std", "text-processing"]
repository = "https://github.com/rodrimati1992/const_format_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../README.md",
    "../LICENSE-ZLIB.md", 
]

[badges]
travis-ci = { repository =  "rodrimati1992/const_format_crates/" }

[lib]
proc-macro = true

[features]

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0.38"
default_features = false
features = ["parsing", "proc-macro"]

[dev-dependencies]
fastrand = "1.3.4"